Fixing the styles of the buttons, colors, and alignment

--- a/static/mainstyles/poststyles.css
+++ b/static/mainstyles/poststyles.css
@@ -71,8 +71,17 @@
 }
 
 #bodytext{
-    border-radius:1px;
+    border:1px solid transparent;
     background-color: #2c2c2c;
+    border-radius: 2px;
+    width:50rem;
+    height:20rem;
+}
+
+#bodytext:hover{
+    border:2px solid #989898;
+    background-color: #2c2c2c;
+    border-radius: 2px;
     width:50rem;
     height:20rem;
 }
@@ -106,4 +115,41 @@ ul#horizontal-list {
 #horizontal-list li{
     display: inline;
     float:left;
+}
+
+
+#formtitleinput{
+    background-color: #2c2c2c;
+    border-color: transparent;
+    border-radius: 2px;
+    height: 2.5rem;
+    width: 30rem;
+}
+
+#formtitleinput::placeholder{
+    font-family: 'Teko', sans-serif;
+    color: #989898;
+    font-size:15;
+}
+input, select, textarea{
+    color: #989898;
+}
+
+#formtitleinput:hover{
+    background-color: #2c2c2c;
+    border-color: white;
+    border-radius: 2px;
+    height: 2.5rem;
+    width: 30rem;
+}
+
+.form:focus{
+    font-family: 'Teko', sans-serif;
+    font-size:17;
+    background-color: #2c2c2c;
+    outline:none;
+    border-color: white;
+    border-radius: 2px;
+    height: 2.5rem;
+    width: 30rem;
 }
