--- a/static/mainstyles/styles.css
+++ b/static/mainstyles/styles.css
@@ -46,7 +46,7 @@ p{
 
 /*Form information including search bar*/
 .form{
-    background-color: #2c2c2c;
+    background-color: #0D1117;
     border-color: transparent;
     border-radius: 2px;
     height: 2.5rem;
@@ -63,7 +63,7 @@ input, select, textarea{
 }
 
 .form:hover{
-    background-color: #2c2c2c;
+    background-color: #0D1117;
     border-color: white;
     border-radius: 2px;
     height: 2.5rem;
